# Yieldfy

./: .env.example  .gitignore  .vercelignore  AUDIT.md  Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  YIELDFY_PROGRESS.md  docker-compose.yml  index.html  package-lock.json  package.json  vercel.json
.do/: optimizer.app.yaml  wxrp-indexer.app.yaml
.github/workflows/: anchor.yml  ci.yml  deploy-do.yml  release-sdk.yml  watch-mainnet.yml
.lovable/: plan.md
apps/dashboard/: .env.example  .env.production.example  package.json  tailwind.config.ts  vite.config.ts
docs/: integration.md  local-dev.md  observability.md  webhooks.md
ops/: DEPLOY-PRODUCTION.md  DEPLOY.md  DEPLOYMENTS.md  PHASE_C_STATUS.md  README.md  deploy.sh  dev.sh
ops/grafana/: yieldfy-optimizer.json
ops/prometheus/: prometheus.yml
ops/scripts/: circuit-breaker-dryrun.ts  devnet-deposit.ts  init-devnet.ts  init-mainnet.ts  package.json  smoke-test-mainnet.ts  watch-mainnet.ts
programs/yieldfy/: Cargo.toml
programs/yieldfy_distributor/: Cargo.toml  DEPLOY.md
programs/yieldfy_distributor/src/: lib.rs
services/optimizer/: .dockerignore  .env.devnet.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  index.css  main.tsx
template/: DepositFlow.tsx  README.md
tests/: admin.spec.ts  attest_negative.spec.ts  deposit.spec.ts  helpers.ts  invariants.spec.ts  package.json  rebalance.spec.ts  rotate_attestor.spec.ts  rotate_authority.spec.ts  set_cap.spec.ts  tsconfig.json  vitest.config.ts  withdraw.spec.ts
(+94 files in other folders)
