[package]
name = "yieldfy_distributor"
version = "0.1.0"
description = "Yieldfy SOL rewards merkle distributor — claim Phase 2 SOL yields against the indexer-published root"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yieldfy_distributor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
solana-keccak-hasher = "2.2"
